feated：增加 filterField 方法

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lodash-super",
-  "version": "1.0.1-rc1.0.0",
+  "version": "1.0.2",
   "description": "这是一个 lodash 加强版的工具库",
   "main": "index.js",
   "scripts": { 
